--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "hehecoding/laragen-ui-kit",
+    "description": "This is my package laragen-ui-kit",
     "keywords": [
-        ":vendor_name",
+        "hehecoding",
         "laravel",
-        ":package_slug"
+        "laragen-ui-kit"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/hehecoding/laragen-ui-kit",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "HeHeCoding",
+            "email": "dev@hehecoding.com",
             "role": "Developer"
         }
     ],
@@ -35,13 +35,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Hehecoding\\LaragenUiKit\\": "src",
+            "Hehecoding\\LaragenUiKit\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Hehecoding\\LaragenUiKit\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -61,10 +61,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Hehecoding\\LaragenUiKit\\LaragenUiKitServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "LaragenUiKit": "Hehecoding\\LaragenUiKit\\Facades\\LaragenUiKit"
             }
         }
     },
